--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 <script>
     document.getElementById('downloadBtn').addEventListener('click', function() {
-        const pdfUrl = 'NPTEL23MG68S83220053820253276.pdf'; // Replace with actual PDF URL
+        const pdfUrl = 'Theory and Practice of Non Destructive Testing.pdf'; // Replace with actual PDF URL
         window.open(pdfUrl, '_blank');
     });
 </script>
